[package]
name = "raggio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "*"
raw-window-handle = "*"
winit = "*"
windows = { version = "*", features = [
    "Foundation",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging"
]}
